# KinectFusionApp

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KinectFusionApp/: CMakeLists.txt  Makefile  cmake_install.cmake
KinectFusionApp/include/: depth_camera.h
KinectFusionApp/src/: depth_camera.cpp  main.cpp
